--- a/src/components/FirstScreen/FirstScreen.css
+++ b/src/components/FirstScreen/FirstScreen.css
@@ -42,3 +42,114 @@
   justify-content: space-between;
 }
 
+.text-container {
+  text-align: left;
+}
+
+.nav-elements a:hover {
+  color: #003348;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+.text-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  align-items: left;
+  margin-right: 40px;
+}
+
+.heading {
+  display: flex;
+  font-size: 72px;
+  font-family: 'AGLettericaCondensedC Regular';
+  background-image: linear-gradient(45deg, #996018, #eda83e, #edc759, #d99136);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  font-weight: 900;
+  margin-bottom: 30px;
+  margin-left: 0;
+}
+
+.subheading {
+  font-size: 36px;
+  font-family: 'AGLettericaCondensedC Regular';
+  color: #9b7b4b;
+  margin-top: 0px;
+  margin-bottom: 20px;
+  display: flex;
+}
+
+.paragraph {
+  color: #003a52;
+  width: 700px;
+  margin-top: 0px;
+  font-weight: 500;
+}
+
+.button-container {
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+}
+
+.button1 button {
+  font-size: 30px;
+  background-color: white;
+  border: 1px solid #9a7b4b;
+  color: #9a7b4b;
+  font-weight: 700;
+  cursor: default;
+}
+
+.button2 button {
+  font-size: 30px;
+  background-color: #9a7b4b;
+  color: white;
+  font-weight: 700;
+  cursor: default;
+}
+
+.button-p-text1,
+.button-p-text2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #9a7b4b;
+  font-weight: 700;
+  font-size: 30px;
+  margin-top: 0;
+  font-family: 'AGLettericaCondensedC Regular';
+  letter-spacing: 10px;
+}
+
+.horizontal-line {
+  color: #003a52;
+  border: none;
+  border-top: 2px solid #000;
+  width: 100%;
+  margin: 10px 0;
+}
+
+.text-image-container {
+  display: flex;
+}
+
+.image-container img {
+  margin-top: 30px;
+  margin-left: 30px;
+  margin-bottom: -8px;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
