--- a/src/components/FirstScreen/FirstScreen.css
+++ b/src/components/FirstScreen/FirstScreen.css
@@ -153,3 +153,24 @@
   }
 }
 
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+.player {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
