--- a/src/components/FirstScreen/FirstScreen.css
+++ b/src/components/FirstScreen/FirstScreen.css
@@ -174,3 +174,22 @@
   align-items: center;
 }
 
+.btnContainer {
+  display: flex;
+  flex-direction: column;
+  margin-left: 50px;
+  margin-top: 50px;
+}
+
+.btn {
+  margin-top: 12px;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
