--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,60 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  background: #F6F6F6;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.container {
+  margin: 0 auto;
+  width: 640px;
+}
+
+.main-header {
+  display: flex;
+  background-color: #324157;
+  margin-bottom: 5px;
+}
+.main-header .app-name {
+  color: white;
+  margin: 0 2em 0 1em;
+  font: 20px sans-serif;
+  line-height: 40px;
+  width: 100%;
+}
+
+.controls {
+  margin-top: 5px;
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+}
+
+.control-list {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+}
+
+button {
+  background-color: #eee;
+  border: 0;
+  border-radius: 3px;
+  cursor: pointer;
+  margin: 0 10px;
+  outline: 0;
+  padding: 6px 12px;
+}
+
+label {
+  cursor: pointer;
+}
+
+ .react-video-marker {
+  
+  height: 8px !important;
+  
 }
